# redmine-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.yaml
src/: __init__.py  main.py  redmine_client.py  version.py
src/redmine_types/: __init__.py  redmine.py
src/schemas/: __init__.py  redmine.py
src/tools/: __init__.py  attachments.py  custom_fields.py  enumerations.py  files.py  groups.py  issue_categories.py  issue_relations.py  issues.py  journals.py  memberships.py  my_account.py  news.py  projects.py  queries.py  roles.py  search.py  time_entries.py  users.py  versions.py  wiki_pages.py
