[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmine-mcp"
version = "2.0.0"
description = "Model Context Protocol server for Redmine API integration"
authors = [
    {name = "Redmine MCP Project"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["redmine", "mcp", "model-context-protocol", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

